--- a/style.css
+++ b/style.css
@@ -225,3 +225,37 @@
             cursor: pointer;
             margin-left:10px;
         }
+
+
+
+@media only screen and (max-width: 600px) {
+
+.sidebar{
+	visibility: hidden;
+}
+header{
+	width: 80%;
+	margin: 0 auto;
+	padding: 0 auto;
+}
+.container{
+	width: 80%;
+}
+.main{
+	width: 100%;
+	margin-left:0 auto;
+}
+#username{
+	font-size: 14px;
+	font-weight: bold;
+}
+#userid{
+	font-size: 12px;
+}
+body{
+       font-family: sans-serif;
+       margin:0;
+       padding:0;
+       background-color: #E7EFEF;
+}
+}
